Specific records class in progress

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,7 @@
         </activity>
         <activity android:name=".AllRecordsDisplay"/>
         <activity android:name=".AddUserComponent"/>
+        <activity android:name=".SpecificRecordsDisplay"/>
     </application>
 
 </manifest>
